# django-cla

./: .gitignore  .pre-commit-config.yaml  Containerfile  README.md  cla-app.sh  manage.py  pyproject.toml  pytest.sh  run.sh
api/: cla_check.py  forms.py  legacy_api_views.py  test_legacy_api.py  tests.py  views.py
base/: common.py  email_backends.py  logging_filters.py  settings.py  urls.py  wsgi.py
base/cloudsql_mysql/: base.py
cla/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
cla/migrations/: 0001_initial.py  0002_alter_ccla_ccla_manager.py  0002_alter_ccla_id.py  0002_alter_icla_mailing_address.py  0002_rename_address_ccla_corporation_address_and_more.py  0003_alter_icla_id.py  0003_ccla_docuseal_submission_id.py  0003_icla_ccla.py  0003_icla_is_volunteer.py  0004_alter_ccla_authorized_signer_name_and_more.py  0004_cclaattachment.py  0004_rename_is_volunteer_icla__is_volunteer.py  0005_alter_ccla_options_alter_icla_options_ccla_cla_pdf_and_more.py  0005_alter_icla__is_volunteer.py  0005_remove_icla_ccla_manager_alter_cclaattachment_ccla.py  0006_alter_ccla_docuseal_submission_id_and_more.py  0006_icla_person.py  0006_remove_icla_employer_approved_at_icla_in_schedule_a.py  0007_alter_icla_in_schedule_a.py  0007_rename_point_of_contact_ccla_ccla_manager_and_more.py  0008_alter_ccla_authorized_signer_email_and_more.py  0008_alter_ccla_options_alter_icla_options_and_more.py  0009_alter_ccla_authorized_signer_email_and_more.py  0010_alter_ccla_corporation_address_alter_ccla_telephone_and_more.py
cla/templates/cla/: ccla_signing_request.html  icla_sign_request.html  icla_signing_request.html
personnel/: admin.py  models.py
personnel/migrations/: 0001_initial.py  0002_alter_person_ghe_alter_person_github_and_more.py  0003_alter_identity_options.py
