[project]
name = "cla-app"
version = "0.1.0"
description = "Django based web application to handle CLA requests"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.2.3",
    "django-cors-headers>=4.7.0",
    "docuseal>=1.0.7",
    "dynaconf[yaml]>=3.2.11",
    "gunicorn>=23.0.0",
    "mysqlclient>=2.2.7",
    "requests>=2.32.4",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "base.settings"
python_files = "tests.py test_*.py *_tests.py"

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "pre-commit>=4.2.0",
    "pudb>=2025.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.1",
]
